<resources>
    <!-- General -->
    <string name="app_name">CleanArchitectureSample</string>

    <!-- Main -->
    <string name="public_time">発表日時: %1$s</string>
    <string name="temperature_max">最高:%1$s℃</string>
    <string name="temperature_min">最低:%1$s℃</string>
    <string name="action_about">アプリについて</string>
    <string name="action_licenses">オープンソースライセンス</string>

    <!-- Forecast -->
    <string name="action_refresh">更新する</string>

    <!-- About -->
    <string name="about_title">アプリについて</string>
    <string name="about_ver">Ver. %1$s</string>
    <string name="about_develop_by">Develop by %1$s</string>
    <string name="about_play_store">Playストア</string>
    <string name="about_email">Eメール</string>
    <string name="about_web_site">Webサイト</string>
    <string name="about_copyright">© %1$d %2$s</string>
</resources>
